--- a/web/views/addorder.html
+++ b/web/views/addorder.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="index.html" class="active">
+                <a href="../index.html" class="active">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -92,7 +92,7 @@
                     <h3>Settings</h3>
                 </a>
                 
-                <a href="login.html">
+                <a href="../login.html">
                     <span class="material-icons-sharp">
                         logout
                     </span>
