--- a/web/views/assest/styles/add_style.css
+++ b/web/views/assest/styles/add_style.css
@@ -1,8 +1,5 @@
 /* Container for the form */
-
-/* Container for the form */
 .form-container {
- 
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -11,9 +8,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 1.5rem; /* Updated border radius */
   margin: 4.7rem 0; /* Updated margin */
-  
 }
-
 
 /* Left and Right sections of the form */
 .form-left, .form-right {
@@ -34,12 +29,20 @@
   color: #333;
 }
 
-.form-group input, .form-group textarea {
+.form-group input, .form-group textarea, .form-group select {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+/* Additional style for select (dropdown) */
+.form-group select {
+  appearance: none; /* Remove default dropdown arrow */
+  background: url('data:image/svg+xml;utf8,<svg fill="%23333" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center;
+  background-size: 16px 16px;
+  padding-right: 30px;
 }
 
 .radio-group {
