--- a/web/views/settings.html
+++ b/web/views/settings.html
@@ -15,7 +15,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Dashboard</h2>
+                <h1>Settings</h2>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -24,7 +24,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="index.html" class="active">
+                <a href="../index.html" class="active">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -85,7 +85,7 @@
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="settings.html">
+                <a href="settings.html" class="active">
                     <span class="material-icons-sharp">
                         settings
                     </span>
@@ -135,7 +135,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
         
@@ -144,7 +144,7 @@
         
             <div class="user-profile">
                 <div class="logo">
-                    <img src="images/logo.png" alt="Company logo">
+                    <img src="../images/logo.png" alt="Company logo">
                     <h2>Favor Haven</h2>
                     <p>The Best for The Best</p>
                 </div>
