--- a/web/views/adduser.html
+++ b/web/views/adduser.html
@@ -16,7 +16,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Dashboard</h2>
+                <h1>Add User</h2>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -25,7 +25,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="index.html" class="active">
+                <a href="../index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -37,7 +37,7 @@
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="adduser.html">
+                <a href="adduser.html" class="active">
                     <span class="material-icons-sharp">
                         add
                     </span>
