--- a/web/views/users.html
+++ b/web/views/users.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="./assest/styles/mang_style.css">
     <link rel="stylesheet" href="./assest/styles/style.css">
     <title>RMS</title>
 </head>
@@ -15,7 +19,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Dashboard</h2>
+                <h1>Users</h1>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -24,7 +28,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="index.html" >
+                <a href="../index.html">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -54,13 +58,13 @@
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="products.html" >
+                <a href="products.html">
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="addproduct.html" >
+                <a href="addproduct.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
@@ -103,13 +107,88 @@
         <!-- End of Sidebar Section -->
 
         <!-- Main Content -->
-        <main>
-            
-            <!-- Analyses -->
-           
-            <!-- End of Recent Orders -->
         
-        </main>
+            <main>
+                <!-- User Management -->
+                <div class="form-container">
+                    <div class="manage-users-container">
+                        <div class="form-group">
+                            Show 
+                            <select id="category">
+                                <option value="4">4</option>
+                                <!-- More options can be added here -->
+                            </select> 
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>Email</th>
+                                    <th>First name</th>
+                                    <th>Last name</th>
+                                    <th>Phone</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>donna</td>
+                                    <td>donna@gmail.com</td>
+                                    <td>Donna</td>
+                                    <td>Edwards</td>
+                                    <td>7025556960</td>
+                                    <td class="actions">
+                                        <button class="edit-btn"><i class="fas fa-edit"></i></button>
+                                        <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>veronica</td>
+                                    <td>veronica@gmail.com</td>
+                                    <td>Veronica</td>
+                                    <td>Lyle</td>
+                                    <td>7850002680</td>
+                                    <td class="actions">
+                                        <button class="edit-btn"><i class="fas fa-edit"></i></button>
+                                        <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>liamoore</td>
+                                    <td>liam@gmail.com</td>
+                                    <td>Liam</td>
+                                    <td>Moore</td>
+                                    <td>7400002140</td>
+                                    <td class="actions">
+                                        <button class="edit-btn"><i class="fas fa-edit"></i></button>
+                                        <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>kenny</td>
+                                    <td>kennyw@gmail.com</td>
+                                    <td>Kenny</td>
+                                    <td>Waldrom</td>
+                                    <td>7545554540</td>
+                                    <td class="actions">
+                                        <button class="edit-btn"><i class="fas fa-edit"></i></button>
+                                        <button class="delete-btn"><i class="fas fa-trash-alt"></i></button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="pagination-container">
+                            Showing 1 of 1 entries
+                            <ul class="pagination">
+                                <li><a href="#">Previous</a></li>
+                                <li><a href="#">1</a></li>
+                                <li><a href="#">Next</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of User Management -->
+            </main>
         <!-- End of Main Content -->
         
         <!-- Right Section -->
@@ -135,7 +214,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
         
@@ -144,7 +223,7 @@
         
             <div class="user-profile">
                 <div class="logo">
-                    <img src="images/logo.png" alt="Company logo">
+                    <img src="../images/logo.png" alt="Company logo">
                     <h2>Favor Haven</h2>
                     <p>The Best for The Best</p>
                 </div>
@@ -208,10 +287,9 @@
             </div>
         
         </div>
-        
 
     <script src="./assest/scripts/orders.js"></script>
-    <script src="./assest/scripts/index.js"></script>
+    
 </body>
 
 </html>
